# rust-single-layer-nn

./: Cargo.toml  README.md  test.txt
src/: fileread.rs  lettercounter.rs  main.rs  math.rs  perceptron.rs
train/: english.txt  german.txt  polish.txt
