[package]
name = "rust-single-layer-nn"
version = "0.1.1"
edition = "2021"
authors = ["Vaqxai <https://github.com/vaqxai>"]
description = "Single-layer neural network for lanugage analysis from source texts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.8", features = ["derive"] }
once_cell = "1.1.0"
